# swagger.yaml
@@ -20,6 +20,8 @@ tags:
     description: "File Resource"
   - name: "node"
     description: "Node Resource"
+  - name: "user node"
+    description: "User Node Resource"
 schemes:
   - "https"
 definitions:
@@ -203,6 +205,37 @@ definitions:
             default:
               type: "string"
               description: "默认值"
+  UserNode:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        description: "节点id"
+      user_id:
+        type: "integer"
+        description: "用户id"
+      name:
+        type: "string"
+        description: "节点名称"
+      description:
+        type: "string"
+        description: "节点描述"
+      code:
+        type: "string"
+        description: "节点分享码"
+      node_type:
+        type: "string"
+        description: "节点类型"
+      extra:
+        type: "string"
+        description: "额外信息"
+  UserNodeList:
+    type: "object"
+    properties:
+      data:
+        type: "array"
+        items:
+          $ref: "#/definitions/UserNode"
 paths:
   /session:
     get:
@@ -850,3 +883,105 @@ paths:
           description: "节点信息"
           schema:
             $ref: "#/definitions/NodeDescription"
+  /user_node/{node_id}:
+    put:
+      tags:
+        - "user node"
+      summary: "修改指定节点"
+      consumes:
+        - "multipart/form-data"
+      parameters:
+        - in: "path"
+          name: "node_id"
+          type: "integer"
+          description: "节点id"
+          required: true
+        - in: "formData"
+          name: "name"
+          type: "string"
+          description: "节点名称"
+        - in: "formData"
+          name: "description"
+          type: "string"
+          description: "节点描述"
+        - in: "formData"
+          name: "reset_code"
+          type: "boolean"
+          description: "重置节点分享码"
+      responses:
+        200:
+          description: "节点修改成功"
+    delete:
+      tags:
+        - "user node"
+      summary: "删除指定节点"
+      parameters:
+        - in: "path"
+          name: "node_id"
+          type: "integer"
+          description: "节点id"
+          required: true
+      responses:
+        204:
+          description: "节点删除成功"
+  /user_node:
+    get:
+      tags:
+        - "user node"
+      summary: "获取指定用户下的所有节点"
+      parameters:
+        - in: "query"
+          name: "user_id"
+          type: "integer"
+          description: "用户id"
+          required: true
+      responses:
+        200:
+          description: "节点列表"
+          schema:
+            $ref: "#/definitions/UserNodeList"
+    post:
+      tags:
+        - "user node"
+      summary: "创建节点"
+      consumes:
+        - "multipart/form-data"
+      parameters:
+        - in: "formData"
+          name: "name"
+          type: "string"
+          description: "节点名称"
+          required: true
+        - in: "formData"
+          name: "description"
+          type: "string"
+          description: "节点描述"
+          required: true
+        - in: "formData"
+          name: "node_id"
+          type: "integer"
+          description: "节点id"
+          required: true
+      responses:
+        201:
+          description: "创建成功"
+          schema:
+            $ref: "#/definitions/UserNode"
+  /user_node/import:
+    post:
+      tags:
+        - "user node"
+      summary: "导入节点"
+      consumes:
+        - "multipart/form-data"
+      parameters:
+        - in: "formData"
+          name: "code"
+          type: "string"
+          description: "节点分享码"
+          required: true
+      responses:
+        201:
+          description: "创建成功"
+          schema:
+            $ref: "#/definitions/UserNode"
